provision-api-server/users-api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: users-api-server-deployment
  name: users-api-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-api-server-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: users-api-server-deployment
    spec:
      containers:
        - image: users_api_server:latest
          imagePullPolicy: IfNotPresent # or Never
          name: users-api-server
          ports:
            - containerPort: 3000
          resources: {}
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: users-api-server-service
  labels:
    app: users-api-server-deployment
spec:
  selector:
    app: users-api-server-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
