provision-api-server/ingress-kind.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: books-api.local
      http:
        paths:
          - path: /api/books-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: books-api-server-service
                port:
                  number: 80
          - path: /api/users-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-api-server-service
                port:
                  number: 80
